Добавляет модальное окно и формы

--- a/hotels.html
+++ b/hotels.html
@@ -42,14 +42,13 @@
         <nav class="navigation">
           <ul class="navigation-main navigation-menu">
             <li class="navigation-main-item">
-              <a href="index.html" class="navigation-main-link navigation-main-link-current"
-                aria-current="page">Главная</a>
+              <a href="index.html" class="navigation-main-link" aria-current="page">Главная</a>
             </li>
             <li class="navigation-main-item">
               <a href="#" class="navigation-main-link">О Седоне</a>
             </li>
             <li class="navigation-main-item">
-              <a href="hotels.html" class="navigation-main-link">Гостиницы</a>
+              <a href="hotels.html" class="navigation-main-link navigation-main-link-current">Гостиницы</a>
             </li>
           </ul>
           <ul class="navigation-main navigation-user">
@@ -108,26 +107,27 @@
                 <ul class="filter-list">
                   <li class="filter-list-item">
                     <label class="filter-label" for="hotels-pool">
-                  <input id="hotels-pool" class="control-input control-input-checkbox visually-hidden" type="checkbox" name="hotels-pool"
-                    checked>
-                    <span class="checkbox-custom"></span>
-                    <span class="control-label">Бассейн</span>
-                </label>
+                      <input id="hotels-pool" class="control-input control-input-checkbox visually-hidden"
+                        type="checkbox" name="hotels-pool" checked>
+                      <span class="checkbox-custom"></span>
+                      <span class="control-label">Бассейн</span>
+                    </label>
                   </li>
                   <li class="filter-list-item">
                     <label class="filter-label" for="hotels-parking">
-                  <input id="hotels-parking" class="control-input control-input-checkbox visually-hidden" type="checkbox" name="hotels-parking"
-                    checked>
-                    <span class="checkbox-custom"></span>
-                    <span class="control-label">Парковка</span>
-                </label>
+                      <input id="hotels-parking" class="control-input control-input-checkbox visually-hidden"
+                        type="checkbox" name="hotels-parking" checked>
+                      <span class="checkbox-custom"></span>
+                      <span class="control-label">Парковка</span>
+                    </label>
                   </li>
                   <li class="filter-list-item">
                     <label class="filter-label" for="wifi">
-                  <input id="wifi" class="control-input control-input-checkbox visually-hidden" type="checkbox" name="hotels-wifi">
-                  <span class="checkbox-custom"></span>
-                  <span class="control-label">Wi-Fi</span>
-                </label>
+                      <input id="wifi" class="control-input control-input-checkbox visually-hidden" type="checkbox"
+                        name="hotels-wifi">
+                      <span class="checkbox-custom"></span>
+                      <span class="control-label">Wi-Fi</span>
+                    </label>
                   </li>
                 </ul>
               </fieldset>
@@ -136,21 +136,24 @@
                 <ul class="filter-list">
                   <li class="filter-list-item">
                     <label class="filter-label">
-                      <input class="control-input control-input-radio visually-hidden" type="radio" name="housing-type" value="hotel" checked>
+                      <input class="control-input control-input-radio visually-hidden" type="radio" name="housing-type"
+                        value="hotel" checked>
                       <span class="radio-custom"></span>
                       <span class="control-label">Гостиница</span>
                     </label>
                   </li>
                   <li class="filter-list-item">
                     <label class="filter-label">
-                      <input class="control-input control-input-radio visually-hidden" type="radio" name="housing-type" value="motel">
+                      <input class="control-input control-input-radio visually-hidden" type="radio" name="housing-type"
+                        value="motel">
                       <span class="radio-custom"></span>
                       <span class="control-label">Мотель</span>
                     </label>
                   </li>
                   <li class="filter-list-item">
                     <label class="filter-label">
-                      <input class="control-input control-input-radio visually-hidden" type="radio" name="housing-type" value="apartment">
+                      <input class="control-input control-input-radio visually-hidden" type="radio" name="housing-type"
+                        value="apartment">
                       <span class="radio-custom"></span>
                       <span class="control-label">Апартаменты</span>
                     </label>
@@ -161,10 +164,10 @@
                 <legend class="control">Стоимость, ₽:</legend>
                 <div class="range">
                   <div class="range-wrapper-inputs">
-                  <label class="costs-label costs-label-from" for="input-from">от</label>
-                  <input id="input-from" class="input-costs-from" type="number" name="costs-from" value="0">
-                  <label class="costs-label costs-label-to" for="input-to">до</label>
-                  <input id="input-to" class="input-costs-to" type="number" name="costs-to" value="9000">
+                    <label class="costs-label costs-label-from" for="input-from">от</label>
+                    <input id="input-from" class="input-costs-from" type="number" name="costs-from" value="0">
+                    <label class="costs-label costs-label-to" for="input-to">до</label>
+                    <input id="input-to" class="input-costs-to" type="number" name="costs-to" value="9000">
                   </div>
                   <div class="range-scale">
                     <div class="range-bar" style="left: 0; width: 206px;">
