Небольшие доделки для проверки на переполнение

--- a/hotels.html
+++ b/hotels.html
@@ -305,11 +305,11 @@
         </section>
         <section class="subscribe-hotels">
           <h2>Подпишитесь на рассылку</h2>
-          <p class="subscribe-hotels-subscription">Только полезная информация и никакого спама, честное
+          <p class="subscribe-hotels-subscription">Только полезная информация и никакого спама,<br>честное
             бойскаутское!</p>
           <form action="https://echo.htmlacademy.ru/" class="subscribe-table" method="post">
             <label class="visually-hidden" for="e-mail">Укажите ваш e-mail</label>
-            <input id="e-mail" class="input-subscribe" type="email" name="email" placeholder="Ваш e-mail">
+            <input id="e-mail" class="input-subscribe" type="email" name="email" placeholder="Ваш e-mail" required>
             <button class="button button-blue button-subscribe" type="submit">Подписаться</button>
           </form>
         </section>
