--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
             <li class="gallery-item-picture">
               <div class="gallery-item-wrap">
                 <h3>Настоящий городок</h3>
+                <div class="gallery-divider gallery-divider-picture"></div>
                 <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
               </div>
               <div class="gallery-item-picture-image">
@@ -102,14 +103,17 @@
             </li>
             <li class="gallery-item gallery-item-light">
               <h3>Небольшая площадь</h3>
+              <div class="gallery-divider"></div>
               <p>Все достопримечательности находятся очень близко</p>
             </li>
             <li class="gallery-item gallery-item-middle">
               <h3>Красивая дорога</h3>
+              <div class="gallery-divider"></div>
               <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
             </li>
             <li class="gallery-item gallery-item-light">
               <h3>Мало туристов</h3>
+              <div class="gallery-divider"></div>
               <p>Большинство едет в Гранд Каньон и толпится там</p>
             </li>
             <li class="gallery-item-picture">
@@ -118,6 +122,7 @@
               </div>
               <div class="gallery-item-wrap">
                 <h3>Там есть<br>мост дьявола</h3>
+                <div class="gallery-divider gallery-divider-picture"></div>
                 <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
               </div>
             </li>
@@ -155,7 +160,7 @@
           </p>
           <form action="https://echo.htmlacademy.ru/" class="subscribe-table" method="post">
             <label class="visually-hidden" for="e-mail">Укажите ваш e-mail</label>
-            <input class="input-subscribe" id="e-mail" type="email" name="email" placeholder="Ваш e-mail">
+            <input class="input-subscribe" id="e-mail" type="email" name="email" placeholder="Ваш e-mail" required>
             <button class="button button-blue button-subscribe" type="submit">Подписаться</button>
           </form>
         </section>
