--- a/hotels.html
+++ b/hotels.html
@@ -316,7 +316,7 @@
       </main>
       <footer class="page-footer container">
         <section class="socials">
-          <h2 class="visually-hidden" hidden>Список социальных сетей</h2>
+          <h2 class="visually-hidden">Список социальных сетей</h2>
           <ul class="social-list">
             <li>
               <a class="social-link" href="https://vk.com/htmlacademy">
@@ -352,11 +352,12 @@
           </ul>
         </section>
         <section class="phone">
-          <a href="tel:+78128121212" class="phone-link" aria-label="Номер телефона для связи">+7 (812) 812-12-12</a>
+          <h2 class="visually-hidden">Телефон для связи</h2>
+          <a href="tel:+78128121212" class="phone-link">+7 (812) 812-12-12</a>
         </section>
         <section class="academy-logo">
+        <h2 class="visually-hidden">Логотип HTML Academy</h2>
           <a href="https://htmlacademy.ru/" class="academy-link">
-            <span class="visually-hidden">Логотип HTML Academy</span>
             <svg class="html-logo-svg" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg"
               width="115" height="34">
               <path
