--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
                 aria-current="page">Главная</a>
             </li>
             <li class="navigation-main-item">
-              <a class="navigation-main-link" href="#" >О Седоне</a>
+              <a class="navigation-main-link" href="#">О Седоне</a>
             </li>
             <li class="navigation-main-item">
-              <a class="navigation-main-link" href="hotels.html" >Гостиницы</a>
+              <a class="navigation-main-link" href="hotels.html">Гостиницы</a>
             </li>
           </ul>
           <ul class="navigation-main navigation-user">
@@ -67,7 +67,9 @@
             </li>
             <li class="navigation-user-item">
               <button class="button-favorite" type="button">
-                <span class="favorite-counter">12</span>
+                <span class="favorite-counter">
+                  <span class="favorite-counter-text">12</span>
+                </span>
                 <svg class="favorite-svg" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg"
                   width="18" height="17" fill="none" viewBox="0 0 18 17">
                   <path
@@ -85,8 +87,7 @@
       <main class="main-container main-index">
         <section class="hero">
           <h1 class="visually-hidden">Добро пожаловать в великолепную Седону</h1>
-          <img class="hero-image-main" src="images/welcome-sedona.svg" width="458" height="352"
-            alt="">
+          <img class="hero-image-main" src="images/welcome-sedona.svg" width="458" height="352" alt="">
         </section>
         <section class="gallery">
           <h2 class="visually-hidden">Галлерея</h2>
@@ -146,14 +147,15 @@
         <section class="appointment">
           <h2 class="visually-hidden">Поиск гостиницы</h2>
           <p class="appointment-title">Заинтересовались?</p>
-          <p class="appointment-subscription">Укажите предполагаемые даты поездки,<br>и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+          <p class="appointment-subscription">Укажите предполагаемые даты поездки,<br>и мы покажем вам лучшие
+            предложения гостиниц в Седоне</p>
           <a href="hotels.html">Поиск гостиницы в Седоне</a>
         </section>
         <section class="subscribe-index">
           <h2>Подпишитесь на рассылку</h2>
           <p class="subscribe-index-subscription">Только полезная информация и никакого спама,<br>честное бойскаутское!
           </p>
-          <form class="subscribe-table" action="https://echo.htmlacademy.ru/"  method="post">
+          <form class="subscribe-table" action="https://echo.htmlacademy.ru/" method="post">
             <label class="visually-hidden" for="e-mail">Укажите ваш e-mail</label>
             <input class="input-subscribe" id="e-mail" type="email" name="email" placeholder="Ваш e-mail" required>
             <button class="button button-blue button-subscribe" type="submit">Подписаться</button>
@@ -167,24 +169,31 @@
             <li>
               <a class="social-link" href="https://vk.com/htmlacademy">
                 <span class="visually-hidden">Ссылка на соцсеть Вконтакте</span>
-                <svg class="social-svg" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" width="25" height="15">
-                  <path d="M24.12 1.8c.16-.54 0-.94-.8-.94H20.7c-.67 0-.98.34-1.15.73 0 0-1.33 3.2-3.22 5.27-.61.6-.9.8-1.23.8-.16 0-.41-.2-.41-.75v-5.1c0-.66-.19-.95-.74-.95H9.82c-.42 0-.67.3-.67.59 0 .62.95.76 1.04 2.51v3.8c0 .83-.15.98-.48.98-.9 0-3.06-3.2-4.34-6.88-.25-.72-.5-1-1.18-1H1.57c-.75 0-.9.34-.9.73 0 .68.89 4.07 4.14 8.55 2.17 3.06 5.23 4.72 8 4.72 1.68 0 1.88-.37 1.88-1v-2.32c0-.74.16-.88.7-.88.38 0 1.05.19 2.6 1.66 1.79 1.75 2.08 2.54 3.08 2.54h2.63c.75 0 1.12-.37.9-1.1-.23-.72-1.08-1.77-2.2-3.02-.62-.71-1.54-1.48-1.82-1.86-.39-.5-.28-.71 0-1.15 0 0 3.2-4.42 3.54-5.93Z" clip-rule="evenodd" />
+                <svg class="social-svg" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg"
+                  width="25" height="15">
+                  <path
+                    d="M24.12 1.8c.16-.54 0-.94-.8-.94H20.7c-.67 0-.98.34-1.15.73 0 0-1.33 3.2-3.22 5.27-.61.6-.9.8-1.23.8-.16 0-.41-.2-.41-.75v-5.1c0-.66-.19-.95-.74-.95H9.82c-.42 0-.67.3-.67.59 0 .62.95.76 1.04 2.51v3.8c0 .83-.15.98-.48.98-.9 0-3.06-3.2-4.34-6.88-.25-.72-.5-1-1.18-1H1.57c-.75 0-.9.34-.9.73 0 .68.89 4.07 4.14 8.55 2.17 3.06 5.23 4.72 8 4.72 1.68 0 1.88-.37 1.88-1v-2.32c0-.74.16-.88.7-.88.38 0 1.05.19 2.6 1.66 1.79 1.75 2.08 2.54 3.08 2.54h2.63c.75 0 1.12-.37.9-1.1-.23-.72-1.08-1.77-2.2-3.02-.62-.71-1.54-1.48-1.82-1.86-.39-.5-.28-.71 0-1.15 0 0 3.2-4.42 3.54-5.93Z"
+                    clip-rule="evenodd" />
                 </svg>
               </a>
             </li>
             <li>
               <a class="social-link" href="https://t.me/htmlacademy">
                 <span class="visually-hidden">Ссылка на соцсеть Телеграмм</span>
-                <svg class="social-svg" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" width="18" height="16">
-                  <path d="M16.79.96.84 7.1c-1.09.44-1.08 1.05-.2 1.32l4.1 1.28 9.47-5.98c.44-.27.85-.13.52.17l-7.68 6.93-.28 4.22c.41 0 .6-.2.83-.41l1.99-1.94 4.13 3.06c.77.42 1.31.2 1.5-.71l2.72-12.8c.28-1.1-.43-1.61-1.16-1.28Z" />
+                <svg class="social-svg" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg"
+                  width="18" height="16">
+                  <path
+                    d="M16.79.96.84 7.1c-1.09.44-1.08 1.05-.2 1.32l4.1 1.28 9.47-5.98c.44-.27.85-.13.52.17l-7.68 6.93-.28 4.22c.41 0 .6-.2.83-.41l1.99-1.94 4.13 3.06c.77.42 1.31.2 1.5-.71l2.72-12.8c.28-1.1-.43-1.61-1.16-1.28Z" />
                 </svg>
               </a>
             </li>
             <li>
               <a class="social-link" href="https://www.youtube.com/user/htmlacademyru">
                 <span class="visually-hidden">Ссылка на Ютуб</span>
-                <svg class="social-svg" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" width="23" height="18" fill="none">
-                  <path d="M18.94.36H3.51C1.65.36.33 1.95.33 3.76v10.09c0 1.91 1.32 3.5 3.18 3.5h15.65c1.64 0 3.17-1.59 3.17-3.4V3.76c-.22-1.8-1.53-3.4-3.39-3.4ZM7.99 12.89V4.82l7.34 4.04-7.34 4.03Z" />
+                <svg class="social-svg" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg"
+                  width="23" height="18" fill="none">
+                  <path
+                    d="M18.94.36H3.51C1.65.36.33 1.95.33 3.76v10.09c0 1.91 1.32 3.5 3.18 3.5h15.65c1.64 0 3.17-1.59 3.17-3.4V3.76c-.22-1.8-1.53-3.4-3.39-3.4ZM7.99 12.89V4.82l7.34 4.04-7.34 4.03Z" />
                 </svg>
               </a>
             </li>
@@ -192,14 +201,16 @@
         </section>
         <section class="phone">
           <h2 class="visually-hidden">Телефон для связи</h2>
-          <a class="phone-link" href="tel:+78128121212" >+7 (812) 812-12-12</a>
+          <a class="phone-link" href="tel:+78128121212">+7 (812) 812-12-12</a>
         </section>
         <section class="academy-logo">
-        <h2 class="visually-hidden">Логотип HTML Academy</h2>
-          <a class="academy-link" href="https://htmlacademy.ru/" >
+          <h2 class="visually-hidden">Логотип HTML Academy</h2>
+          <a class="academy-link" href="https://htmlacademy.ru/">
             <span class="visually-hidden">Ссылка на HTML Academy</span>
-            <svg class="html-logo-svg" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" width="115" height="34">
-              <path d="M0 13.26v2.6h2.5v-2.6H0Zm11.6-8.4c-1.6 0-2.8.7-3.6 1.7h-.1V.36h-2v15.5h2v-5.3c0-2.1 1.3-3.6 3.3-3.6 1.8 0 2.9 1.4 2.9 3.2v5.7h2v-6.1c.1-3-1.8-4.9-4.5-4.9Zm15 .3h-4.8v-3.7h-2v3.8h-1.9v2h1.9v6c0 1.7 1 2.7 2.7 2.7h4.1v-2h-3.7c-.7 0-1.1-.4-1.1-1.1v-5.7h4.8v-2Zm14.5-.2c-1.6 0-2.9.8-3.5 2.1h-.1c-.6-1.2-1.8-2.1-3.4-2.1-1.4 0-2.5.8-3.1 1.8h-.1v-1.6H29v10.6h2v-5.4c0-2 1-3.5 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2v-5.6c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2v-6.5c.1-2.5-1.4-4.3-3.9-4.3Zm6.7 8.1c0 1.7 1 2.7 2.8 2.7h2v-2h-1.7c-.7 0-1.1-.4-1.1-1.1V.36h-2v12.7Zm-18.9 7c-.9-1.1-2.2-1.8-3.9-1.8-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-1.9h.1v1.6h2v-10.6h-2v1.5Zm-3.6 7.4c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c0 1.9-1.4 3.6-3.6 3.6Zm18.9-5.1c-.5-2.4-2.6-4.1-5.4-4.1a5.4 5.4 0 0 0-5.6 5.6c0 3.1 2.2 5.6 5.6 5.6 2.8 0 4.9-1.8 5.4-4.2h-2.1a3.4 3.4 0 0 1-3.3 2.3c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6c1.6 0 2.8 1 3.3 2.2h2.1v-.2Zm10.9-2.3c-.9-1.1-2.2-1.8-3.9-1.8-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-1.9h.1v1.6h2v-10.6h-2v1.5Zm-3.6 7.4c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c0 1.9-1.5 3.6-3.6 3.6Zm17.2-7.3c-.9-1.1-2.2-1.9-3.9-1.9-3.1 0-5.4 2.3-5.4 5.6s2.2 5.6 5.4 5.6c1.7 0 3-.8 3.8-1.8h.1v1.5h2v-15.4h-2v6.4Zm-3.6 7.3c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c-.1 2-1.5 3.6-3.6 3.6Zm13.2-9.2c-3.3 0-5.5 2.5-5.5 5.6 0 3 2.1 5.6 5.5 5.6 2.5 0 4.5-1.3 5.2-3.6h-2.1c-.5 1-1.6 1.6-3 1.6-1.9 0-3.3-1.3-3.4-2.9h8.8c.2-3.6-2-6.3-5.5-6.3Zm0 1.9c1.7 0 3 1 3.3 2.6h-6.5c.3-1.5 1.5-2.6 3.2-2.6Zm19.9-1.9c-1.6 0-2.9.8-3.6 2h-.1c-.6-1.2-1.8-2-3.4-2-1.4 0-2.5.7-3.1 1.8v-1.5h-1.9v10.6h2v-5.4c0-2 1-3.4 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2v-5.6c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2v-6.5c.1-2.6-1.4-4.4-3.9-4.4Zm11.2 9.1-3.6-8.9h-2.2l4.8 11.6c-.3.9-.7 1.2-1.7 1.2h-2.5v2h2.5c1.8 0 2.8-.8 3.5-2.6l4.7-12.2h-2.1l-3.4 8.9Z" />
+            <svg class="html-logo-svg" aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg"
+              width="115" height="34">
+              <path
+                d="M0 13.26v2.6h2.5v-2.6H0Zm11.6-8.4c-1.6 0-2.8.7-3.6 1.7h-.1V.36h-2v15.5h2v-5.3c0-2.1 1.3-3.6 3.3-3.6 1.8 0 2.9 1.4 2.9 3.2v5.7h2v-6.1c.1-3-1.8-4.9-4.5-4.9Zm15 .3h-4.8v-3.7h-2v3.8h-1.9v2h1.9v6c0 1.7 1 2.7 2.7 2.7h4.1v-2h-3.7c-.7 0-1.1-.4-1.1-1.1v-5.7h4.8v-2Zm14.5-.2c-1.6 0-2.9.8-3.5 2.1h-.1c-.6-1.2-1.8-2.1-3.4-2.1-1.4 0-2.5.8-3.1 1.8h-.1v-1.6H29v10.6h2v-5.4c0-2 1-3.5 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2v-5.6c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2v-6.5c.1-2.5-1.4-4.3-3.9-4.3Zm6.7 8.1c0 1.7 1 2.7 2.8 2.7h2v-2h-1.7c-.7 0-1.1-.4-1.1-1.1V.36h-2v12.7Zm-18.9 7c-.9-1.1-2.2-1.8-3.9-1.8-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-1.9h.1v1.6h2v-10.6h-2v1.5Zm-3.6 7.4c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c0 1.9-1.4 3.6-3.6 3.6Zm18.9-5.1c-.5-2.4-2.6-4.1-5.4-4.1a5.4 5.4 0 0 0-5.6 5.6c0 3.1 2.2 5.6 5.6 5.6 2.8 0 4.9-1.8 5.4-4.2h-2.1a3.4 3.4 0 0 1-3.3 2.3c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6c1.6 0 2.8 1 3.3 2.2h2.1v-.2Zm10.9-2.3c-.9-1.1-2.2-1.8-3.9-1.8-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-1.9h.1v1.6h2v-10.6h-2v1.5Zm-3.6 7.4c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c0 1.9-1.5 3.6-3.6 3.6Zm17.2-7.3c-.9-1.1-2.2-1.9-3.9-1.9-3.1 0-5.4 2.3-5.4 5.6s2.2 5.6 5.4 5.6c1.7 0 3-.8 3.8-1.8h.1v1.5h2v-15.4h-2v6.4Zm-3.6 7.3c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c-.1 2-1.5 3.6-3.6 3.6Zm13.2-9.2c-3.3 0-5.5 2.5-5.5 5.6 0 3 2.1 5.6 5.5 5.6 2.5 0 4.5-1.3 5.2-3.6h-2.1c-.5 1-1.6 1.6-3 1.6-1.9 0-3.3-1.3-3.4-2.9h8.8c.2-3.6-2-6.3-5.5-6.3Zm0 1.9c1.7 0 3 1 3.3 2.6h-6.5c.3-1.5 1.5-2.6 3.2-2.6Zm19.9-1.9c-1.6 0-2.9.8-3.6 2h-.1c-.6-1.2-1.8-2-3.4-2-1.4 0-2.5.7-3.1 1.8v-1.5h-1.9v10.6h2v-5.4c0-2 1-3.4 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2v-5.6c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2v-6.5c.1-2.6-1.4-4.4-3.9-4.4Zm11.2 9.1-3.6-8.9h-2.2l4.8 11.6c-.3.9-.7 1.2-1.7 1.2h-2.5v2h2.5c1.8 0 2.8-.8 3.5-2.6l4.7-12.2h-2.1l-3.4 8.9Z" />
             </svg>
           </a>
         </section>
@@ -215,46 +226,57 @@
           <form class="modal-form" action="https://echo.htmlacademy.ru/" method="get">
             <label class="modal-label" for="input-date-in">Дата Заезда:</label>
             <div class="input-date-label">
-              <input class="modal-input modal-input-date" id="input-date-in" aria-label="Укажите дату заезда в гостинницу" name="modal-input-date-in" type="text" maxlength="30" placeholder="Укажите дату" required>
+              <input class="modal-input modal-input-date" id="input-date-in"
+                aria-label="Укажите дату заезда в гостинницу" name="modal-input-date-in" type="text" maxlength="30"
+                placeholder="Укажите дату" required>
               <button class="button-calendar" type="button"></button>
             </div>
             <!--Чтобы скрыть тултип для инпута, нужно добавить класс input-tooltip-hide, чтобы показать как доп информацию - класс input-tooltip-succes-->
             <span class="input-tooltip input-tooltip-error">Мы не можем отправить вас в прошлое</span>
-            <label class="modal-label" for="input-date-out" >Дата Выезда:</label>
+            <label class="modal-label" for="input-date-out">Дата Выезда:</label>
             <div class="input-date-label">
-              <input class="modal-input modal-input-date" id="input-date-out" aria-label="Укажите дату выезда из гостиницы" name="modal-input-date-out" type="text" maxlength="30" placeholder="Укажите дату" required>
+              <input class="modal-input modal-input-date" id="input-date-out"
+                aria-label="Укажите дату выезда из гостиницы" name="modal-input-date-out" type="text" maxlength="30"
+                placeholder="Укажите дату" required>
               <button class="button-calendar" type="button"></button>
             </div>
             <!--Чтобы скрыть тултип для инпута, нужно добавить класс input-tooltip-hide, чтобы показать как предупреждение - класс input-tooltip-error-->
             <span class="input-tooltip input-tooltip-succes">На эти даты есть свободные номера. Пока есть.</span>
-            <label class="modal-label" for="input-age-old" >Взрослые:</label>
+            <label class="modal-label" for="input-age-old">Взрослые:</label>
             <div class="modal-wrap-age">
               <div class="input-age-label">
                 <div class="button-wrap">
-                  <button class="button-modal-input button-modal-minus" aria-label="Убавить число взрослых" type="button"></button>
+                  <button class="button-modal-input button-modal-minus" aria-label="Убавить число взрослых"
+                    type="button"></button>
                 </div>
-                <input class="modal-input modal-input-age" id="input-age-old" aria-label="Укажите число взрослых людей" type="number" value="2" required>
+                <input class="modal-input modal-input-age" id="input-age-old" aria-label="Укажите число взрослых людей"
+                  type="number" value="2" required>
                 <div class="button-wrap">
-                  <button class="button-modal-input button-modal-plus" aria-label="Прибавить число взрослых"  type="button"></button>
+                  <button class="button-modal-input button-modal-plus" aria-label="Прибавить число взрослых"
+                    type="button"></button>
                 </div>
               </div>
               <div class="children-wrap">
                 <div class="modal-tooltip-wrap">
-                  <label class="modal-label" for="input-age-chldren" >Дети:</label>
+                  <label class="modal-label" for="input-age-chldren">Дети:</label>
                   <span class="modal-children-tooltip">
                     <button class="tooltip-toggle" type="button">
                       <!-- Чтобы показать тултип, нужно добавить класс tooltip-text-show -->
-                      <span class="tooltip-text">Укажите количество детей, которые будут с вами, возраст которых от 6 до 18 лет. Дети до 6 лет размещаются бесплатно.</span>
+                      <span class="tooltip-text">Укажите количество детей, которые будут с вами, возраст которых от 6 до
+                        18 лет. Дети до 6 лет размещаются бесплатно.</span>
                     </button>
                   </span>
                 </div>
                 <div class="input-age-label">
                   <div class="button-wrap">
-                    <button class="button-modal-input button-modal-minus" aria-label="Убавить число взрослых" type="button"></button>
+                    <button class="button-modal-input button-modal-minus" aria-label="Убавить число взрослых"
+                      type="button"></button>
                   </div>
-                  <input class="modal-input modal-input-age" id="input-age-chldren" aria-label="Укажите число детей" type="number"  value="2">
+                  <input class="modal-input modal-input-age" id="input-age-chldren" aria-label="Укажите число детей"
+                    type="number" value="2">
                   <div class="button-wrap">
-                    <button class="button-modal-input button-modal-plus" aria-label="Прибавить число взрослых" type="button"></button>
+                    <button class="button-modal-input button-modal-plus" aria-label="Прибавить число взрослых"
+                      type="button"></button>
                   </div>
                 </div>
               </div>
