Добавлены метки data-test для проверки и документ с модальным окном modal.html

--- a/modal.html
+++ b/modal.html
@@ -216,7 +216,7 @@
         </section>
       </footer>
     </div>
-    <div class="modal-container"> <!-- Чтобы показать модальное окно, добавить класс modal-container-show-->
+    <div class="modal-container modal-container-show" data-test="modal"> <!-- Чтобы показать модальное окно, добавить класс modal-container-show-->
       <div class="modal modal-search">
         <button class="modal-close-button" type="button">
           <span class="visually-hidden">Закрыть окно поиска гостиницы.</span>
@@ -262,7 +262,7 @@
                   <span class="modal-children-tooltip">
                     <button class="tooltip-toggle" type="button">
                       <!-- Чтобы показать тултип, нужно добавить класс tooltip-text-show -->
-                      <span class="tooltip-text">Укажите количество детей, которые будут с вами, возраст которых от 6 до
+                      <span class="tooltip-text tooltip-text-show">Укажите количество детей, которые будут с вами, возраст которых от 6 до
                         18 лет. Дети до 6 лет размещаются бесплатно.</span>
                     </button>
                   </span>
