--- a/hotels.html
+++ b/hotels.html
@@ -12,7 +12,7 @@
 
   <body>
     <div class="page-wrapper">
-      <header class="page-header container">
+      <header class="page-header container" data-test="header">
         <a class="header-logo-link" href="index.html" aria-current="page">
           <span class="visually-hidden">Логотип Седона.</span>
           <svg class="header-logo-svg" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false"
@@ -83,8 +83,8 @@
           </ul>
         </nav>
       </header>
-      <main class="main-inner main-container">
-        <div class="wrapper-background container">
+      <main class="main-inner main-container" data-test="main">
+        <div class="wrapper-background container" data-test="filter">
           <header class="inner-header">
             <h1>Гостиницы Седоны</h1>
             <ul class="breadcrumbs-list">
@@ -188,7 +188,7 @@
             </form>
           </section>
         </div>
-        <section class="hotels container">
+        <section class="hotels container" data-test="catalog">
           <div class="hotels-controls-wrap">
             <h2>Найдено гостиниц: <span class="number-hotels">38</span></h2>
             <div class="select">
@@ -318,7 +318,7 @@
             </li>
           </ul>
         </section>
-        <section class="subscribe-hotels">
+        <section class="subscribe-hotels" data-test="subscribe">
           <h2>Подпишитесь на рассылку</h2>
           <p class="subscribe-hotels-subscription">Только полезная информация и никакого спама,<br>честное
             бойскаутское!</p>
@@ -329,7 +329,7 @@
           </form>
         </section>
       </main>
-      <footer class="page-footer container">
+      <footer class="page-footer container" data-test="footer">
         <section class="socials">
           <h2 class="visually-hidden">Список социальных сетей.</h2>
           <ul class="social-list">
